updating readme (#8)